--- a/style.css
+++ b/style.css
@@ -1,23 +1,29 @@
 body {
-  background-color: Cyan;
-  font-family: Arial, sans-serif;
-  text-align: center;
-}
-
-h1 {
-  color: brown;
-  font-size: 40px;
-  font-weight: bold
-}
-
-h2 {
-  color: purple;
-  font-size:30px;
-  font-weight: bold
+background-color:LightGray;
 }
 
 p {
-  color: Crimson;
-  font-size:30px;
-  font-weight: italic;
+background-color:rgba(170, 80, 240, 0.3); 
+color:SlateBlue; 
+font-size:40px; 
+font-family:Arial; 
+font-weight:bold; 
+text-align:center; 
+border:10px solid red; 
+margin:10px auto; 
+padding:10px; 
+width:50%;
+}
+
+#para1 {
+background-color:hex(#3bb795); 
+color:hsl(0, 60%, 35%); 
+font-size:30px; 
+font-family:Serif; 
+font-weight:normal; 
+text-align:center; 
+border:20px dotted blue; 
+margin:5px auto; 
+padding:10px; 
+width:50%;
 }
