--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
   margin:5px auto; 
   padding:5px; 
   width:50%;
+}
 p {
   background-color:rgba(170, 80, 240, 0.3); 
   color:SlateBlue; 
