--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ p {
 }
 
 #para1 {
-  background-color:hex(#3bb795); 
+  background-color:#3bb795; 
   color:hsl(0, 60%, 35%); 
   font-size:30px; 
   font-family:Serif; 
